--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="https://5f60-103-171-98-46.ngrok-free.app/clients/setup/chatbot.js"></script>
 </head>
 <body>
-    
+
+        <iframe src="https://5f60-103-171-98-46.ngrok-free.app/" width="500" height="500">
+
+        </iframe>
 </body>
 </html>
