--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="https://5f60-103-171-98-46.ngrok-free.app/clients/setup/chatbot.css" /> 
+    <title>Verifast Demo bots</title>
+    <link rel="stylesheet" type="text/css" href="http://localhost:3000/clients/setup/chatbot.css" /> 
     <script>
-        var chatbotIndex = 'instaeats';
+        var chatbotIndex = 'graphy_sukham';
         var nudgeText = "Chat with me";
     </script>
-    <script src="https://5f60-103-171-98-46.ngrok-free.app/clients/setup/chatbot.js"></script>
+    <script src="http://localhost:3000/clients/setup/chatbot.js"></script>
 </head>
 <body>
 
-        <iframe src="https://5f60-103-171-98-46.ngrok-free.app/" width="500" height="500">
+        <iframe src="http://localhost:3000/" width="300" height="300">
 
         </iframe>
 </body>
